Use root locale